--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
               <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
               <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-              <li><a href="#" class="nav-link scrollto"><i class="bx bx-check-shield"></i> <span>Certifications</span></a></li>
+              <li><a href="https://bryan-lim-dev.github.io/Bry-Lim-Portfolio.github.io/" class="nav-link scrollto"><i class="bx bx-check-shield"></i> <span>Certifications</span></a></li>
             </ul>
           </nav><!-- .nav-menu -->
         </div>
