--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryan Lim Developer Portfolio 2023</title>
+    <title>Bry Lim Portfolio</title>
     <link href="./vendors/aos/aos.css" rel="stylesheet">
     <link href="./vendors/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="./vendors/boxicons/css/boxicons.min.css" rel="stylesheet">
