--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
           <h1>Hi! I'm Bryan Lim</h1>
-          <p>a <span class="typed" data-typed-items=" Developer, Freelancer, Trader, Tech Expert, AI Euthusiast, CyberSec Advocate"></span></p>
+          <p>a <span class="typed" data-typed-items=" Developer, Freelancer, Trader, Tech Expert, AI Enthusiast, CyberSec Advocate"></span></p>
         </div>
     </section><!-- End Hero -->
 
